--- a/Bench Power Supply.ioc
+++ b/Bench Power Supply.ioc
@@ -77,8 +77,9 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA15.GPIOParameters=GPIO_Label
+PA15.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA15.GPIO_Label=Ch1_In
+PA15.GPIO_PuPd=GPIO_PULLDOWN
 PA15.Locked=true
 PA15.Signal=GPIO_Input
 PA5.GPIOParameters=GPIO_Label
@@ -102,8 +103,9 @@ PB0.Signal=ADCx_IN8
 PB1.GPIOParameters=GPIO_Label
 PB1.GPIO_Label=Ch5_Temp
 PB1.Signal=ADCx_IN9
-PB12.GPIOParameters=GPIO_Label
+PB12.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB12.GPIO_Label=Ch5_Out
+PB12.GPIO_PuPd=GPIO_NOPULL
 PB12.Locked=true
 PB12.Signal=GPIO_Output
 PB13.GPIOParameters=GPIO_Label
@@ -113,21 +115,24 @@ PB13.Signal=GPIO_Output
 PB14.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=Ch3_Out
 PB14.Locked=true
-PB14.Signal=GPIO_Analog
+PB14.Signal=GPIO_Output
 PB15.GPIOParameters=GPIO_Label
 PB15.GPIO_Label=Ch1_Out
 PB15.Locked=true
 PB15.Signal=GPIO_Output
-PB3.GPIOParameters=GPIO_Label
+PB3.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB3.GPIO_Label=Ch2_In
+PB3.GPIO_PuPd=GPIO_PULLDOWN
 PB3.Locked=true
 PB3.Signal=GPIO_Input
-PB4.GPIOParameters=GPIO_Label
+PB4.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB4.GPIO_Label=Ch3_In
+PB4.GPIO_PuPd=GPIO_PULLDOWN
 PB4.Locked=true
 PB4.Signal=GPIO_Input
-PB5.GPIOParameters=GPIO_Label
+PB5.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB5.GPIO_Label=Ch4_In
+PB5.GPIO_PuPd=GPIO_PULLDOWN
 PB5.Locked=true
 PB5.Signal=GPIO_Input
 PB6.Mode=I2C
@@ -138,8 +143,9 @@ PC13-TAMPER-RTC.GPIOParameters=GPIO_Label
 PC13-TAMPER-RTC.GPIO_Label=LED
 PC13-TAMPER-RTC.Locked=true
 PC13-TAMPER-RTC.Signal=GPIO_Output
-PC14-OSC32_IN.GPIOParameters=GPIO_Label
+PC14-OSC32_IN.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC14-OSC32_IN.GPIO_Label=Ch5_In
+PC14-OSC32_IN.GPIO_PuPd=GPIO_PULLDOWN
 PC14-OSC32_IN.Locked=true
 PC14-OSC32_IN.Signal=GPIO_Input
 PC15-OSC32_OUT.GPIOParameters=GPIO_Label
